# sherpa_mecha

./: README.md
asystr_dual_arm_model/: CMakeLists.txt  package.xml
asystr_dual_arm_model/config/: ati_setup.yaml
asystr_dual_arm_model/launch/: rviz.launch.py  sherpa_rviz.launch.py
asystr_dual_arm_model/rviz/: default.rviz
asystr_dual_arm_model/src/: tray_pose_broadcaster.cpp
asystr_dual_arm_model/urdf/: ati_setup.urdf.xacro  dual_arm.urdf.xacro  sherpa.urdf  (+4 more)
asystr_sensible_model/: CMakeLists.txt  package.xml
asystr_sensible_model/config/: RPR_config.yaml  YPR_config.yaml  asystr_sensible_config.yaml
asystr_sensible_model/launch/: rviz.launch.py
asystr_sensible_model/meshes/collision/RPR/: differential.stl  wrist_adapter.stl
asystr_sensible_model/meshes/collision/YPR/: flange.stl  wrist_adapter.stl  wrist_roll.stl
asystr_sensible_model/meshes/collision/YPR/old/: differential.stl  wrist_adapter.stl
asystr_sensible_model/meshes/collision/asystr_sensible/: base_link.stl  link_1.stl  link_2.stl  link_3.stl
asystr_sensible_model/meshes/visual/RPR/: wrist_roll.dae
asystr_sensible_model/meshes/visual/RPR/new_v1.0/: flange.dae
asystr_sensible_model/meshes/visual/YPR/: flange.dae
asystr_sensible_model/meshes/visual/YPR/old/: flange.dae
asystr_sensible_model/meshes/visual/asystr_sensible/: base_link.dae  link_2.dae  link_3.dae
asystr_sensible_model/rviz/: default.rviz
asystr_sensible_model/urdf/: asystr_sensible.urdf.xacro  asystr_sensible_RPR.urdf.xacro  asystr_sensible_YPR.urdf.xacro
asystr_sensible_model/urdf/plugin/: dh_plugin.urdf.xacro
(+16 files in other folders)
